--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
   <div class="footer">  
     <span>© 2025 Все права защищены.</span>
     <div class="social-icons">
-      <a href="https://telegram.org/" target="_blank">
+      <a href="https://web.telegram.org/a/#-1001869197128" target="_blank">
         <img src="https://static.tildacdn.com/tild3334-3232-4664-b332-393265333465/photo.png" alt="Telegram" width="35">
       </a>
-      <a href="https://www.tiktok.com/my_tiktok" target="_blank">
+      <a href="https://www.tiktok.com/@meowy_yyy?_t=ZN-8xfnh1tluT4&_r=1" target="_blank">
         <img src="https://static.tildacdn.com/tild3363-3732-4837-b261-373634343166/photo.png" alt="TikTok" width="35">
       </a>
     </div>
